--- a/src/app/components/network/register/register.component.scss
+++ b/src/app/components/network/register/register.component.scss
@@ -1,7 +1,9 @@
 @import '~src/styles.scss';
 
 #RegisterForm {
+  overflow: hidden;
   text-align: left;
+
   // margin-top: 100px;
 
   .google {
@@ -18,10 +20,20 @@
 
     label {
       margin-bottom: 1em;
-      font-size: 0.7em;
+      font-size: 1em;
     }
 
-    h2 {
+    .slide-content label {
+      padding: 1.5em;
+      margin-top: 1em;
+    }
+
+    .slide-content {
+      padding: 0em;
+      margin-top: 0em;
+    }
+
+    label h2 {
       text-align: left;
     }
 
@@ -58,16 +70,18 @@
   .register-wrapper {
     // margin-top: 100px;
     text-align: left;
+    overflow-x: hidden;
+    padding: 1em 3em 3em 2em;
 
     h2 {
       margin: 1em 0;
-      font-size: 20px;
+      font-size: 1.5em;
     }
 
     p {
       margin: 1em 0;
       line-height: 18px;
-      font-size: 13px;
+      font-size: 1em;
     }
   }
 
@@ -119,7 +133,7 @@ button.google-btn {
   float: right;
   margin: 11px 14px 40px 40px;
   color: #757575;
-  font-size: 14px;
+  font-size: 1em;
   letter-spacing: .2px;
   font-family: Roboto;
   user-select: none
@@ -151,71 +165,96 @@ button.google-btn {
 
 
 
-.slider-wrapper{
-  width:  100%;
+.slider-wrapper {
+  width: 100%;
   overflow: hidden;
   margin: auto;
+
 }
+
 #characters {
   width: 500% !important;
   display: flex;
   flex-direction: row;
-  overflow: scroll;
+  overflow-x: hidden;
+
   .slide-content {
     width: 20%;
+    display: flex;
+
+    input {
+      &:checked+label {
+        background-color: $red;
+        opacity: 1;
+      }
+
+      &:hover+label {
+
+        opacity: 1;
+      }
+    }
+
+    label {
+      opacity: 0.5;
+      border-radius: 3px;
+      margin-top: 3em;
       display: flex;
-      input {
-        &:checked+label {
-          background-color: $red;
-          opacity: 1;
-        }
+      align-items: center;
+      justify-content: center;
+      padding: 3em;
 
-        &:hover+label {
-
-          opacity: 1;
-        }
+      img {
+        width: 100px;
       }
-
-      label {
-        opacity: 0.5;
-        border-radius: 3px;
-        margin-top: 3em;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 3em;
-        img {
-          width: 100px;
-                }
-      }
+    }
   }
 }
 
 //desktop
 @media only screen and (min-width: 769px) {
-  .register-wrapper {
-      grid-column: 8/ span 4;
-      grid-row: 4/ span 3;
-      margin: 0;
-      padding: 1em;
-      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.09);
-      background: #fff;
-      overflow: hidden;
-      overflow: Scroll;
-      -ms-overflow-style: none;
+  #RegisterForm {
+    // background-color: #FF6B6B;
   }
+
+  .register-wrapper {
+    grid-column: 8/ span 4;
+    grid-row: 4/ span 3;
+    margin: 0;
+    padding: 1em;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.09);
+    background: #fff;
+    overflow: hidden;
+    overflow: Scroll;
+    -ms-overflow-style: none;
+  }
+
   .register-wrapper::-webkit-scrollbar {
     display: none;
   }
 
+
+
 }
 
 //mobile
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
+  .slide-content label {
+    padding: 0em 0.3em;
+    margin-top: 1em;
+  }
+
   #RegisterForm {
-    margin-top: 100px;
+    margin-top: 3.5em;
   }
-  .register-wrapper{
-    margin-top: 100px;
+
+  .register-wrapper {
+    margin: auto;
+    width: 100%;
   }
+
+  .registerImage {
+    display: none;
+  }
+
+
 }
