--- a/src/app/components/livestream/livechat/livechat.component.scss
+++ b/src/app/components/livestream/livechat/livechat.component.scss
@@ -1,6 +1,6 @@
 @import '~src/styles.scss';
 //Kleuren balkjes functies
-.docent, .student, .bedrijf, .alumni {
+.docent, .student, .bedrijf, .alumni, .bezoeker {
   padding-left: 0.5em;
 }
 
@@ -19,7 +19,9 @@
 .bedrijf{
   border-left: 5px solid $green;
 }
-
+.bezoeker{
+  border-left: 5px solid $yellow;
+}
 .tooltipHover{
   cursor: pointer;
   position: relative;
