--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -32,7 +32,7 @@
     </li>
     <li>
         <h3 class="subtititle">Ik zou graag meer willen weten van een eerstejaarsstudent. Hoe kan ik als bedrijf contact maken met deze persoon?</h3>
-        <p>Na het registreren kan je gemakkelijk eerstejaarsstudenten vinden bij de nominaties en de chatrooms. Loop in de chatkamer dichtbij een andere gebruiker om hun bio te zien. Studenten zullen waarschijnlijk vermelden in welk jaar ze zitten. Ook kan je een privé-chat starten om meer info te vragen zoals hun LinkedIn pagina of portfolio. Loop naar een bepaalde cluster om mee te doen aan een groepsgesprek. Hier zitten studenten van die specifieke cluster.
+        <p>Na het registreren kan je gemakkelijk eerstejaarsstudenten vinden bij de nominaties en de chatrooms. Loop in de chatkamer dichtbij een andere gebruiker om hun bio te zien. Studenten zullen waarschijnlijk vermelden in welk jaar ze zitten. Loop naar een bepaalde cluster om mee te doen aan een groepsgesprek. Hier zitten studenten van die specifieke cluster.
         </p>
     </li>
     <li>
@@ -47,7 +47,7 @@
     </li>
     <li>
         <h3 class="subtititle">Andere vraag of probleem?</h3>
-        <p>Contacteer een moderator in <a routerLink="/network">de netwerkkamer</a>. Zij zullen je met veel plezier verder helpen. Je kan een moderator herkennen aan hun naam in het <span style="font-weight: 600;">vetjes</span>.
+        <p>Contacteer een moderator in <a routerLink="/network">de netwerkkamer</a>. Zij zullen je met veel plezier verder helpen.
         </p>
     </li>
 </ol>
