--- a/src/app/components/network/login/login.component.html
+++ b/src/app/components/network/login/login.component.html
@@ -1,6 +1,9 @@
 
 <section id='login' class ='container-grid'>
   <app-header class="red"></app-header>
+  <div class="registerImage">
+    <img src="../../../../assets/register.gif">
+  </div>
   <article class="container login-wrapper">
     <h2>Je bent nog niet ingelogd.</h2>
     <p>Om met andere mensen te kunnen chatten hebben we even je tijd nodig om te registreren of in te loggen. Andere
