vergeten media query

--- a/src/app/components/network/login/login.component.html
+++ b/src/app/components/network/login/login.component.html
@@ -1,5 +1,5 @@
 <section id='login' class='container-grid'>
-  <div class="registerImage" *ngIf="!mobile">
+  <div class="registerImage">
     <img src="../../../../assets/register.gif">
   </div>
   <app-header class="red"></app-header>
