--- a/src/styles.scss
+++ b/src/styles.scss
@@ -313,7 +313,7 @@ app-notification{
 }
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .registerImage{
     display: none;
   }
