Kleine css dingetjes

--- a/src/app/components/network/googleregister/googleregister.component.html
+++ b/src/app/components/network/googleregister/googleregister.component.html
@@ -1,4 +1,4 @@
-  <app-header class="red"></app-header>
+  <app-header class="red" title="register"></app-header>
   <section id="RegisterForm" class="container-grid">
 
     <div class="registerImage" *ngIf="!mobile">
@@ -187,7 +187,7 @@
             </div>
             <div class="input-form">
               <label for="Bio">Bio</label>
-              <textarea placeholder="Bio" type='text' #bio formControlName="bio"></textarea>
+              <textarea placeholder="ben je naar iets op zoek? stage, werknemers, informatie,... of gewoon aan het rondkijken? Heb je specifieke interesses? Vertel het hier!" type='text' #bio formControlName="bio"></textarea>
             </div>
 
 
