--- a/src/app/components/network/login/login.component.html
+++ b/src/app/components/network/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="registerImage">
     <img src="../../../../assets/register.gif">
   </div>
-  <app-header class="red"></app-header>
+  <app-header class="red" title="login"></app-header>
   <div class="registerImage">
     <img src="../../../../assets/register.gif">
   </div>
