--- a/src/app/components/network/register/register.component.html
+++ b/src/app/components/network/register/register.component.html
@@ -14,7 +14,7 @@
 <!-- <input placeholder="Username" type='text' #username>
  <button class="button" (click)="auth.AnonymousSignIn(username.value)">Login with Username</button>
   <span class="txt-light">or</span> -->
-<app-header class="red"></app-header>
+<app-header class="red" title="register"></app-header>
 <section id="RegisterForm" class="container-grid">
 
   <div class="registerImage">
@@ -220,7 +220,7 @@
             class='alert alert-danger'>Select a function.</div>
           <div class="input-form">
             <label for="Bio">Bio</label>
-            <textarea placeholder="Bio" type='text' #bio formControlName="bio"></textarea>
+            <textarea placeholder="ben je naar iets op zoek? stage, werknemers, informatie,... of gewoon aan het rondkijken? Heb je specifieke interesses? Vertel het hier!" type='text' #bio formControlName="bio"></textarea>
 
           </div>
           <div class="input-form">
