--- a/src/styles.scss
+++ b/src/styles.scss
@@ -281,7 +281,7 @@ app-notification{
 
 @media only screen and (min-width: 769px) {
   body{
-    overflow-x: hidden;
+    overflow: hidden;
   }
   .container-grid{
     display: grid;
