--- a/src/app/components/livestream/livechat/livechat.component.scss
+++ b/src/app/components/livestream/livechat/livechat.component.scss
@@ -1,6 +1,6 @@
 @import '~src/styles.scss';
 //Kleuren balkjes functies
-.docent, .student, .bedrijf, .alumni, .bezoeker {
+.docent, .student, .bedrijf, .alumni, .bezoeker, .ouders {
   padding-left: 0.5em;
 }
 
@@ -19,7 +19,7 @@
 .bedrijf{
   border-left: 5px solid $green;
 }
-.bezoeker{
+.bezoeker, .ouders{
   border-left: 5px solid $yellow;
 }
 .tooltipHover{
