--- a/src/app/components/network/room/room.component.scss
+++ b/src/app/components/network/room/room.component.scss
@@ -243,7 +243,7 @@
       grid-column: 1/ span 12;
       grid-row: 2/ span 6;
 
-      // background-image: url('../../../../assets/images/background.png');
+      background-image: url('../../../../assets/images/background.png');
       z-index: 0;
       cursor: pointer;
   }
@@ -280,6 +280,7 @@
     .wrapper{
       width: 100%;
       z-index: 1;
+      background-color: #fff ;
     }
 }
 
