--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -1,22 +1,22 @@
-<app-header title="Profiel" back='true'></app-header>
+<app-header title="Profiel" class="pink" back='true'></app-header>
 
 <div class="{{currentUser['function']}} container-grid">
-    <div id="wrap">
-        <div id="img">
-        <img [src]="'assets/mannekes/' +currentUser['character']+ '.png'">
-        </div>
-        <div id="info">
-        <h4>Naam</h4>
-        <p>{{currentUser['displayName']}}</p>
-    
-        <h4>Rol</h4>
-        <p>{{currentUser['function']}}</p>
-    
-        <h4>Bio</h4>
-        <p>{{currentUser['bio']}}</p>
-    
-        <h4>Website</h4>
-        <a href = "{{currentUser['website']}}">{{currentUser['website']}}</a>
+  <div id="wrap">
+    <div id="img">
+      <img [src]="'assets/mannekes/' +currentUser['character']+ '.png'">
     </div>
+    <div id="info" class="{{currentUser['function']}}">
+      <h4>Naam</h4>
+      <p>{{currentUser['displayName']}}</p>
+
+      <h4>Rol</h4>
+      <p>{{currentUser['function']}}</p>
+
+      <h4>Bio</h4>
+      <p>{{currentUser['bio']}}</p>
+
+      <h4>Website</h4>
+      <a href="{{currentUser['website']}}">{{currentUser['website']}}</a>
     </div>
+  </div>
 </div>
