--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -16,7 +16,7 @@
         <p>{{currentUser['bio']}}</p>
     
         <h4>Website</h4>
-        <a href = "{{currentUser['website']}}">{{currentUser['website']}}</a>
+        <a href = "http://{{currentUser['website']}}">{{currentUser['website']}}</a>
     </div>
     </div>
 </div>
