--- a/src/app/components/network/room/room.component.html
+++ b/src/app/components/network/room/room.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="chat$ | async as chat">
+<ng-container>
   <ng-container *ngIf=" auth.user$ | async as user">
     <app-header class="red" back="false" title="Netwerk" id="desktopHeader"></app-header>
     <div class="container-grid">
@@ -31,7 +31,7 @@
                 <div>
                   <div class="flex space-between">
                     <span class="tag is-dark">{{returnDate(msg.createdAt)}}</span>
-                    <span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    <span class="tag is-dark txt-right">{{ msg.userName || msg.uid }}</span>
                   </div>
                   <p>{{ msg.content }}</p>
                   <img src="assets/eye.svg" *ngIf="msg.seen" class="seen">
@@ -44,7 +44,7 @@
                 <div>
                   <div class="flex space-between">
                     <span class="tag is-dark">{{returnDate(msg.createdAt)}}</span>
-                    <span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    <span class="tag is-dark txt-right">{{ msg.userName || msg.uid }}</span>
                   </div>
                   <p *ngIf="!mobile">{{ msg.content }}</p>
                   <p *ngIf="mobile" appHoldable (holdTime)="holdHandler($event, chat, msg, i)" class="holdable">{{ msg.content }}</p>
@@ -68,7 +68,7 @@
                 <div>
                   <div class="flex space-between">
                     <span class="tag is-dark">{{returnDate(msg.createdAt)}}</span>
-                    <span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    <span class="tag is-dark txt-right">{{ msg.userName || msg.uid }}</span>
                   </div>
                   <p>👏</p>
                   <img src="assets/eye.svg" *ngIf="msg.seen" class="seen">
@@ -86,7 +86,7 @@
               <article>
                 <div>
                   <div class="flex space-between">
-                    <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    <span class="tag is-dark">{{ msg.userName || msg.uid }}</span>
                     <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                   </div>
                   <p>{{ msg.content }}</p>
@@ -101,7 +101,7 @@
                 </div> -->
                 <div>
                   <div class="flex space-between">
-                    <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    <span class="tag is-dark">{{ msg.userName || msg.uid }}</span>
                     <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                   </div>
                   <p>{{ msg.content }}</p>
@@ -114,7 +114,7 @@
                 <article>
                   <div>
                     <div class="flex space-between">
-                      <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                      <span class="tag is-dark">{{ msg.userName || msg.uid }}</span>
                       <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                     </div>
                     <p>👏</p>
