--- a/src/app/profile-view/profile-view.component.scss
+++ b/src/app/profile-view/profile-view.component.scss
@@ -1,3 +1,5 @@
+@import '~src/styles.scss';
+
 @media only screen and (min-width: 769px) {
   .container-grid {
     #wrap {
@@ -9,44 +11,26 @@
   }
 
   .docent {
-    background-color: rgba(243, 193, 193, 0.4);
+    background-color: $pink;
   }
 
   .student {
-    background-color: rgba(79, 205, 196, 0.4);
+    background-color: $blue;
   }
 
   .alumni {
-    background-color: rgba(255, 107, 107, 0.4);
+    background-color: $red;
   }
 
   .bedrijf {
-    background-color: rgba(149, 209, 123, 0.4);
+    background-color: $green;
   }
 
-  .bezoeker {
-    background-color: rgba(249, 212, 138, 0.4);
+  .bezoeker, .ouders {
+    background-color: $yellow;
   }
 
-  .docent {
-    border-left: 5px solid $pink;
-  }
 
-  .student {
-    border-left: 5px solid $blue;
-  }
-
-  .alumni {
-    border-left: 5px solid $red;
-  }
-
-  .bedrijf {
-    border-left: 5px solid $green;
-  }
-
-  .bezoeker {
-    border-left: 5px solid $yellow;
-  }
 
   #img {
     padding: 1em 1em 0 1em;
