--- a/src/app/components/network/room/room.component.html
+++ b/src/app/components/network/room/room.component.html
@@ -86,7 +86,7 @@
               <article>
                 <div>
                   <div class="flex space-between">
-                    <span class="tag is-dark">{{ msg.userName || msg.uid }}</span>
+                    <span class="tag is-dark go-to-profile-black" [routerLink]="'/profile/' + msg.uid">{{ msg.userName || msg.uid }}</span>
                     <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                   </div>
                   <p>{{ msg.content }}</p>
@@ -101,7 +101,7 @@
                 </div> -->
                 <div>
                   <div class="flex space-between">
-                    <span class="tag is-dark">{{ msg.userName || msg.uid }}</span>
+                    <span class="tag is-dark go-to-profile-black" [routerLink]="'/profile/' + msg.uid">{{ msg.userName || msg.uid }}</span>
                     <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                   </div>
                   <p>{{ msg.content }}</p>
@@ -114,7 +114,7 @@
                 <article>
                   <div>
                     <div class="flex space-between">
-                      <span class="tag is-dark">{{ msg.userName || msg.uid }}</span>
+                      <span class="tag is-dark go-to-profile-black" [routerLink]="'/profile/' + msg.uid">{{ msg.userName || msg.uid }}</span>
                       <span class="tag is-dark" style="text-align: right;">{{returnDate(msg.createdAt)}}</span>
                     </div>
                     <p>👏</p>
